<resources>
    <string name="app_name">AndroidProjectCollection</string>
    <string name="appName">Instagram</string>
    <string name="name1">breadcrumbz</string>
    <string name="name2">Golden Fiesta</string>
    <string name="name3">Suzaku</string>
    <string name="name4">Fleurette</string>
    <string name="name5">Something here</string>
    <string name="name6">Anitomy</string>
    <string name="comment">Comment</string>
    <string name="buttonName">Like</string>
    <string name="buttonName1">Share</string>
    <string name="buttonName2">Home</string>
    <string name="buttonName3">Search</string>
    <string name="buttonName4">Add</string>
    <string name="buttonName5">Media</string>
    <string name="buttonName6">Profile</string>
    <string name="squared">x²</string>
    <string name="cubed">x³</string>
    <string name="logarithm">log₁₀(x)</string>
    <string name="black_turn">Black\'s turn</string>
    <string name="red_turn">Red\'s Turn</string>
    <string name="black_win">Black Wins</string>
    <string name="red_win">Red Wins</string>
    <string name="student_registration_form">Student Registration Form</string>
    <string name="complete_name">Complete Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="others">Others</string>
    <string name="birth_date">Birth Date</string>
    <string name="phone_number">Phone Number</string>
    <string name="submit">Submit</string>
    <string name="clear">Clear</string>
    <string name="school_year_graduated">School Year Graduated</string>
    <string name="school_graduated">School Graduated</string>
    <string name="mother_s_name">Mother\'s Name</string>
    <string name="father_s_name">Father\'s Name</string>
    <string name="address">Address</string>
    <string name="email_address">Email Address</string>
</resources>